fix: glue old checks to new model [DHIS2-12214]